[gd_scene load_steps=5 format=2]

[ext_resource path="res://npc/LendMoney.gd" type="Script" id=1]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.604651, 1 )
colors = PoolColorArray( 0.792969, 0.223022, 0.223022, 1, 0.854902, 0.439216, 0.576471, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0.690789, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.973684, 0.202273 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.682171, 1 )
colors = PoolColorArray( 0.396078, 0.396078, 0.396078, 0.803922, 0.568627, 0.568627, 0.568627, 1, 1, 1, 1, 0 )

[node name="LendMoney" type="Node2D" groups=[
"camera_shaker",
]]
script = ExtResource( 1 )

[node name="LendTimer" type="Timer" parent="."]
one_shot = true

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="Particles2D" type="CPUParticles2D" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
position = Vector2( -0.0662155, -14.1041 )
emitting = false
lifetime = 0.8
one_shot = true
explosiveness = 0.44
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 6, 1 )
gravity = Vector2( 0, -50 )
scale_amount = 2.0
scale_amount_random = 1.0
color_ramp = SubResource( 1 )

[node name="Particles2D3" type="CPUParticles2D" parent="."]
position = Vector2( 0, 0.140308 )
z_index = 2
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = false
spread = 180.0
gravity = Vector2( 0, 10 )
initial_velocity = 50.0
initial_velocity_random = 1.0
angle = 50.2
angle_random = 1.0
scale_amount = 6.0
scale_amount_random = 0.88
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[connection signal="timeout" from="LendTimer" to="." method="_on_LendTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
